--- a/styles/certvault.module.css
+++ b/styles/certvault.module.css
@@ -123,7 +123,7 @@
 
 .thirdSectionContent {
   width: 75%;
-  height: 60vh;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -131,10 +131,6 @@
 
 .thirdSectionLeftBox {
   width: 40%;
-  height: 60%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
 
 .thirdSectionLeftBox h1 {
@@ -146,12 +142,6 @@
 
 .thirdSectionRightBox {
   width: 70%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  padding-top: 5vw;
 }
 
 .paraTop h1 {
@@ -664,7 +654,7 @@
   }
 
   .HeroRightBox {
-    height: 70%;
+    height: 35%;
   }
 
   .HeroRightBox .work {
@@ -676,7 +666,7 @@
   }
 
   .imageSecondSection{
-    height: 60vh;
+    height: 100%;
   }
 
   .imageSecondSection .imageBox {
@@ -684,12 +674,13 @@
   }
 
   .img {
-    width: 170%;
+    width: 100%;
+    height: 120%;
     object-fit: cover;
   }
 
   .thirdSectionContent {
-    height: 30vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -721,6 +712,10 @@
 
   .patronumForthSection {
     height: 100%;
+  }
+
+  .forthSectionContent{
+    width: 80%;
   }
 
   .forthSectionLeftBox {
@@ -758,20 +753,14 @@
   }
   .clientTestimonialSectionBottomBox {
     width: 100%;
-    padding-top: 0vh;
-    flex-direction: column;
+    padding-top: 5vh;
   }
-  .clientTestimonialSectionBottomBox {
-    width: 100%;
-    padding-top: 0vh;
-    flex-direction: column;
-  }
+
   .clientTestimonialSectionFigure img{
-    width: 25vw;
+    width: 14vw;
   }
   .clientTestimonialSectionFigureText h5{
-    font-size: 4vw;
-    text-align: center;
+    font-size: 2.5vw;
   }
 
   .clientTestimonialSpan2{
@@ -882,11 +871,11 @@
   }
 
   .videoForthSection {
-    height: 50vh;
+    height: 100%;
   }
 
   .websiteDesignSection {
-    height: 40vh;
+    height: 100%;
     width: 80%;
   }
 
@@ -929,31 +918,82 @@
     font-weight: 500;
   }
 
-    .nextUpContainer {
+   .nextUpContainer {
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    margin-top: 15vw;
   }
 
   .nextUpContent {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+  }
+
+  .nextTitle {
+    margin-right: 21vw;
+    text-align: left;
   }
 
   .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 15vw;
-    color: #a2a2a2;
+    font-size: 3vw;
+    font-weight: 500;
+    opacity: 0.7;
+    margin-bottom: 1vw;
+    color: #1a1a1a;
+    margin-right: 0;
+  }
+
+  .nextProjectHeading {
+    width: 41%;
+    text-align: center;
   }
 
   .nextProjectHeading h1 {
-    font-size: 6vw;
-    color: #1a1a1a;
+    font-size: 7vw;
     font-weight: 500;
+    color: #1a1a1a;
+    position: relative;
+  }
+
+  .nextProjectHeading h1:before {
+    content: "";
+    display: block;
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 7.5vw;
+    height: 0.2vw;
+    background: currentColor;
+    -webkit-transition: -webkit-transform 0.45s
+      cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+  }
+
+  .nextProjectHeading h1:focus:before,
+  .nextProjectHeading h1:hover:before {
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
   }
 }
 
@@ -1025,8 +1065,8 @@
   }
 
   .img {
-    top: -50%;
-    height: calc(100% + 15rem);
+    top: -10%;
+    height: 130%;
     object-fit: cover;
   }
 
@@ -1087,6 +1127,7 @@
 
   .firstLogoBox {
     width: 85%;
+    margin-right: 0;
   }
 
   .secondLogoBox {
@@ -1219,6 +1260,11 @@
     padding: 10vw 0;
   }
 
+  .forthSectionLeftBox{
+    width: 100%;
+  }
+  
+
   .websiteDesignSection .leftBox {
     width: 100%;
   }
@@ -1235,6 +1281,29 @@
   .websiteDesignSection .rightBox h1 {
     font-size: 3.8vw;
   }
+
+  .clientTestimonialSectionLeftBox h1{
+   font-size: 5vw; 
+  }
+
+  .clientTestimonialparaTop h1{
+    font-size: 3.8vw;
+    padding-bottom: 3vh;
+  }
+
+  .clientTestimonialSectionBottomBox{
+    flex-direction: column;
+  }
+
+  .clientTestimonialSectionFigure img{
+    width: 25vw;
+  }
+
+  .clientTestimonialSectionFigureText h5{
+    font-size: 4vw;
+    text-align: center;
+  }
+
 
   .desktopSlider {
     display: none;
