--- a/styles/gcm.module.css
+++ b/styles/gcm.module.css
@@ -614,12 +614,14 @@
   }
 
   .img {
-    width: 130%;
+    width: 100%;
+    height: 120%;
     object-fit: cover;
   }
 
   .thirdSectionContent {
-    height: 30vh;
+    width: 80%;
+    height: 43vh;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -653,6 +655,10 @@
     height: 100%;
     margin-top: 10vw;
     margin-bottom: 5vw;
+  }
+
+  .forthSectionContent{
+    width: 80%;
   }
 
   .forthSectionLeftBox {
@@ -702,6 +708,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 130%;
     object-fit: cover;
     object-position: center;
     padding: 0;
@@ -763,7 +770,7 @@
   }
 
   .videoForthSection {
-    height: 50vh;
+    height: 100%;
   }
 
   .websiteDesignSection {
@@ -783,59 +790,97 @@
     width: 80%;
   }
 
+  .clientTestimonialSectionBottomBox{
+    width: 80%;
+  }
+
+  .clientTestimonialSectionFigure img{
+    width: 14vw;
+  }
+
+  .clientTestimonialSectionFigureText h5{
+    font-size: 2.5vw;
+  }
+
   .nextUpContainer {
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    margin-top: 10vw;
   }
 
   .nextUpContent {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+  }
+
+  .nextTitle {
+    margin-right: 22vw;
+    text-align: left;
   }
 
   .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 15vw;
-    color: #a2a2a2;
+    font-size: 3vw;
+    font-weight: 500;
+    opacity: 0.7;
+    margin-left: 10vw;
+    margin-right: 0;
+    margin-bottom: 1vw;
+    color: #1a1a1a;
+  }
+
+  .nextProjectHeading {
+    width: 32%;
+    text-align: center;
   }
 
   .nextProjectHeading h1 {
-    font-size: 6vw;
-    color: #1a1a1a;
+    font-size: 7vw;
     font-weight: 500;
-  }
-
-   .nextUpContainer {
-    width: 100%;
-    height: 30vh;
-    display: flex;
-  }
-
-  .nextUpContent {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 15vw;
-    color: #a2a2a2;
-  }
-
-  .nextProjectHeading h1 {
-    font-size: 6vw;
     color: #1a1a1a;
-    font-weight: 500;
+    position: relative;
   }
+
+  .nextProjectHeading h1:before {
+    content: "";
+    display: block;
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 8vw;
+    height: 0.2vw;
+    background: currentColor;
+    -webkit-transition: -webkit-transform 0.45s
+      cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+  }
+
+  .nextProjectHeading h1:focus:before,
+  .nextProjectHeading h1:hover:before {
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
+  }
+  
 }
 
 @media screen and (max-width: 776px) {
@@ -941,6 +986,10 @@
     flex-direction: column;
     height: 100%;
     padding: 15vw 0;
+  }
+
+  .forthSectionLeftBox{
+    width: 100%;
   }
 
   .forthSectionLeftBox h1 {
