--- a/styles/patronum.module.css
+++ b/styles/patronum.module.css
@@ -647,7 +647,7 @@
   }
 
   .HeroRightBox {
-    height: 90%;
+    height: 75%;
   }
 
   .HeroRightBox .work {
@@ -668,10 +668,11 @@
   }
 
   .thirdSectionContent {
+    width: 80%;
     height: 40vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .thirdSectionLeftBox {
@@ -704,8 +705,16 @@
     margin-bottom: 5vw;
   }
 
+  .forthSectionContent{
+    width: 80%;
+  }
+
   .forthSectionLeftBox {
     height: 40%;
+  }
+
+  .forthSectionLeftBox{
+    width: 100%;
   }
 
   .forthSectionLeftBox h1 {
@@ -790,7 +799,8 @@
   }
 
   .colorSection {
-    height: 50vh;
+    height: 100%;
+    margin: 10vw 0;
   }
 
   .colorBoxesSection {
@@ -798,19 +808,27 @@
   }
 
   .colorBoxHeadingBackground h2 {
-    top: 70%;
+    display: none;
   }
 
-  .colorBoxesSection img {
-    width: 90%;
-  }
+.colorBoxesSection ul{
+  display: block;
+}
+
+.colorBoxesSection ul li{
+  font-size: 2vw;
+}
+
+.colorOne, .colorTwo, .colorThree, .colorFour{
+  height: 120px;
+}
 
   .videoForthSection {
-    height: 49vh;
+    height: 45vh;
   }
 
   .websiteDesignSection {
-    height: 55vh;
+    height: 45vh;
     width: 80%;
   }
 
@@ -826,32 +844,91 @@
     width: 80%;
   }
 
+  .clientTestimonialSectionFigure img{
+    width: 14vw;
+  }
+
+  .clientTestimonialSectionFigureText h5{
+    font-size: 2.5vw;
+  }
   .nextUpContainer {
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    margin-top: 15vw;
   }
 
   .nextUpContent {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+  }
+
+  .nextTitle {
+    margin-right: 18vw;
+    text-align: left;
   }
 
   .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 15vw;
-    color: #a2a2a2;
+    font-size: 3vw;
+    font-weight: 500;
+    opacity: 0.7;
+    margin-right: 0;
+    margin-bottom: 1vw;
+    color: #1a1a1a;
+  }
+
+  .nextProjectHeading {
+    width: 40%;
+    text-align: center;
   }
 
   .nextProjectHeading h1 {
-    font-size: 6vw;
-    color: #1a1a1a;
+    font-size: 7vw;
     font-weight: 500;
+    color: #1a1a1a;
+    position: relative;
   }
+
+  .nextProjectHeading h1:before {
+    content: "";
+    display: block;
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 8vw;
+    height: 0.2vw;
+    background: currentColor;
+    -webkit-transition: -webkit-transform 0.45s
+      cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+  }
+
+  .nextProjectHeading h1:focus:before,
+  .nextProjectHeading h1:hover:before {
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
+  }
+  
 }
 
 @media screen and (max-width: 776px) {
@@ -1172,48 +1249,8 @@
   .desktopSlider {
     display: none;
   }
-}
 
-
-@media (min-width: 1201px) and (max-width: 3839px) {
-
-  .nextUpContainer {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 991px) {
-
-  .nextUpContainer {
-    width: 100%;
-    height: 30vh;
-    display: flex;
-  }
-
-  .nextUpContent {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 15vw;
-    color: #a2a2a2;
-  }
-
-  .nextProjectHeading h1 {
-    font-size: 6vw;
-    color: #1a1a1a;
-    font-weight: 500;
-  }
-}
-
-@media screen and (max-width: 776px) {
-  .nextUpContainer {
+   .nextUpContainer {
     width: 100%;
     height: 20vh;
     display: flex;
