--- a/styles/pdtl.module.css
+++ b/styles/pdtl.module.css
@@ -698,15 +698,17 @@
   }
 
   .img {
-    width: 130%;
+    width: 100%;
+    height: 130%;
     object-fit: cover;
   }
 
   .thirdSectionContent {
+    width: 80%;
     height: 40vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .thirdSectionLeftBox {
@@ -737,6 +739,10 @@
     height: 100%;
     margin-top: 10vw;
     margin-bottom: 5vw;
+  }
+
+  .forthSectionContent{
+    width: 80%  ;
   }
 
   .forthSectionLeftBox {
@@ -816,16 +822,64 @@
   }
 
   .colorSection {
-    height: 35vh;
+    height: 50vh;
   }
 
   .colorBoxesSection {
     height: 45%;
   }
 
+  .colorBox{
+    padding-top: 12vw;
+  }
+
   .colorBoxHeadingBackground h2 {
     top: 70%;
+    font-size: 20vw;
   }
+
+   .colorBoxesSection {
+      width: 87%;
+      height: 80%;
+    }
+
+    .colorBoxHeadingBackground h2 {
+      top: 70%;
+      font-size: 20vw;
+    }
+    .colorBoxesSection ul li{
+    font-size: 2.2vw;
+  }
+
+  .colorOne{
+    width: 180px;
+    height: 180px;
+  }
+
+  .colorTwo{
+    width: 180px;
+    height: 180px;
+    left: 16vw;
+  }
+
+  .colorThree{
+    width: 180px;
+    height: 180px;
+    left: 32vw;
+  }
+
+  .colorFour{
+    width: 180px;
+    height: 180px;
+    left: 48vw;
+  }
+
+  .colorFive{
+    width: 180px;
+    height: 180px;
+    left: 64vw;
+  }
+
 
   .videoForthSection {
     height: 50vh;
@@ -848,31 +902,90 @@
     width: 80%;
   }
 
+  .clientTestimonialSectionFigure img{
+    width: 14vw;
+  }
+
+  .clientTestimonialSectionFigureText h5{
+    font-size: 2.5vw;
+  }
+
   .nextUpContainer {
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    margin-top: 10vw;
   }
 
   .nextUpContent {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+  }
+
+  .nextTitle {
+    margin-right: 14vw;
+    text-align: left;
   }
 
   .nextTitle h1 {
-    font-size: 2.4vw;
-    margin-right: 9vw;
-    color: #a2a2a2;
+    font-size: 3vw;
+    font-weight: 500;
+    opacity: 0.7;
+    color: #1a1a1a;
+    margin-bottom: 1vw;
+    margin-right: 0;
+  }
+
+  .nextProjectHeading {
+    width: 35%;
+    text-align: center;
   }
 
   .nextProjectHeading h1 {
-    font-size: 6vw;
-    color: #1a1a1a;
+    font-size: 7vw;
     font-weight: 500;
+    color: #1a1a1a;
+    position: relative;
+  }
+
+  .nextProjectHeading h1:before {
+    content: "";
+    display: block;
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 7.5vw;
+    height: 0.2vw;
+    background: currentColor;
+    -webkit-transition: -webkit-transform 0.45s
+      cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+  }
+
+  .nextProjectHeading h1:focus:before,
+  .nextProjectHeading h1:hover:before {
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
   }
 }
 
@@ -980,6 +1093,10 @@
     flex-direction: column;
     height: 100%;
     padding: 15vw 0;
+  }
+
+  .forthSectionLeftBox{
+    width: 100%;
   }
 
   .forthSectionLeftBox h1 {
@@ -1244,7 +1361,7 @@
   }
 
   .nextTitle {
-    margin-right: 12vw;
+    margin-right: 16vw;
     text-align: left;
   }
 
@@ -1258,7 +1375,7 @@
   }
 
   .nextProjectHeading {
-    width: 43%;
+    width: 50%;
     text-align: center;
   }
 
