--- a/styles/workProject.module.css
+++ b/styles/workProject.module.css
@@ -223,6 +223,11 @@
 }
 
 @media screen and (max-width: 991px) {
+
+  .ipad{
+    height: 10vh;
+  }
+
   .projectHeading {
     width: 100%;
   }
@@ -245,6 +250,7 @@
     width: 100%;
     height: 100%;
     flex-direction: column;
+    margin-bottom: 0;
   }
 
   .glide {
@@ -258,7 +264,12 @@
   }
 
   .glideContent img {
-    top: -20%;
+    top: -10%;
+    height: 125%;
+  }
+
+  .displayNoneMobile{
+    display: none;
   }
 
   .mb_0 {
@@ -271,6 +282,10 @@
 
   .mt0 {
     margin-top: 5vw;
+  }
+
+  .forthMt{
+    margin-top: 0;
   }
 
   .textContent h1 {
@@ -294,6 +309,10 @@
 
   .mt20 {
     margin-top: 0;
+  }
+
+  .displayNoneMobile{
+    display: none;
   }
 
   .projectHeading {
