--- a/styles/wragby.module.css
+++ b/styles/wragby.module.css
@@ -680,7 +680,7 @@
     }
 
     .HeroRightBox {
-      height: 90%;
+      height: 75%;
     }
 
     .HeroRightBox .work {
@@ -690,6 +690,10 @@
 
     .HeroRightBox .year {
       font-size: 2.5vw;
+    }
+
+    .forthSectionContent{
+      width: 80%;
     }
 
     .imageSecondSection .imageBox {
@@ -828,16 +832,47 @@
     }
 
     .colorBoxesSection {
+      width: 87%;
       height: 80%;
     }
 
     .colorBoxHeadingBackground h2 {
       top: 70%;
+      font-size: 20vw;
     }
+    .colorBoxesSection ul li{
+    font-size: 2.2vw;
+  }
 
-    .colorBoxesSection img {
-      width: 90%;
-    }
+  .colorOne{
+    width: 180px;
+    height: 180px;
+  }
+
+  .colorTwo{
+    width: 180px;
+    height: 180px;
+    left: 16vw;
+  }
+
+  .colorThree{
+    width: 180px;
+    height: 180px;
+    left: 32vw;
+  }
+
+  .colorFour{
+    width: 180px;
+    height: 180px;
+    left: 48vw;
+  }
+
+  .colorFive{
+    width: 180px;
+    height: 180px;
+    left: 64vw;
+  }
+
 
     .videoForthSection {
       height: 50vh;
@@ -860,58 +895,94 @@
       width: 80%;
     }
 
-    .nextUpContainer {
-      width: 100%;
-      height: 30vh;
-      display: flex;
+    .clientTestimonialSectionBottomBox{
+      width: 80%;
     }
 
-    .nextUpContent {
-      width: 80%;
-      margin: 0 auto;
+    .clientTestimonialSectionFigure img{
+      width: 14vw;
+    }
+
+    .clientTestimonialSectionFigureText h5{
+      font-size: 2.5vw;
+    }
+
+   .nextUpContainer {
+      width: 100%;
+      height: 20vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      text-align: left;
       flex-direction: column;
-    }
-
-    .nextTitle h1 {
-      font-size: 2.4vw;
-      margin-right: 15vw;
-      color: #a2a2a2;
-    }
-
-    .nextProjectHeading h1 {
-      font-size: 6vw;
-      color: #1a1a1a;
-      font-weight: 500;
-    }
-
-    .nextUpContainer {
-      width: 100%;
-      height: 30vh;
-      display: flex;
+      margin-top: 10vw;
     }
   
     .nextUpContent {
       width: 80%;
       margin: 0 auto;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+    }
+  
+    .nextTitle {
+      margin-right: 5vw;
+      text-align: left;
     }
   
     .nextTitle h1 {
-      font-size: 2.4vw;
-      margin-right: 15vw;
-      color: #a2a2a2;
+      font-size: 3vw;
+      font-weight: 500;
+      opacity: 0.7;
+      margin-right: 0;
+      margin-bottom: 1vw;
+      color: #1a1a1a;
+    }
+  
+    .nextProjectHeading {
+      width: 23%;
+      text-align: center;
     }
   
     .nextProjectHeading h1 {
-      font-size: 6vw;
-      color: #1a1a1a;
+      font-size: 7vw;
       font-weight: 500;
+      color: #1a1a1a;
+      position: relative;
+    }
+  
+    .nextProjectHeading h1:before {
+      content: "";
+      display: block;
+      position: absolute !important;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 7.5vw;
+      height: 0.2vw;
+      background: currentColor;
+      -webkit-transition: -webkit-transform 0.45s
+        cubic-bezier(0.4, 0.22, 0.21, 1.04);
+      transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+      -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+      -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+        -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+      transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+      transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+        -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+        -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
+        -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
+    }
+  
+    .nextProjectHeading h1:focus:before,
+    .nextProjectHeading h1:hover:before {
+      -webkit-transform: scaleX(0);
+      -moz-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+      -o-transform: scaleX(0);
+      transform: scaleX(0);
     }
   }
 
@@ -1221,11 +1292,13 @@
     }
 
     .clientTestimonialSectionBottomBox{
-      width: 90%;
+      width: 100%;
+      flex-direction: column;
+      text-align: center;
     }
 
     .clientTestimonialSectionFigureText h5{
-      font-size: 3.5vw;
+      font-size: 4vw;
     }
 
     .clientTestimonialSpan2{
@@ -1237,7 +1310,7 @@
     }
 
     .clientTestimonialSectionFigure img{
-      width: 16vw;
+      width: 25vw;
     }
 
     .desktopSlider {
@@ -1264,7 +1337,7 @@
     }
   
     .nextTitle {
-      margin-right: 26vw;
+      margin-right: 3vw;
       text-align: left;
     }
   
@@ -1278,7 +1351,7 @@
     }
   
     .nextProjectHeading {
-      width: 56%;
+      width: 30%;
       text-align: center;
     }
   
