--- a/styles/Hireus.module.css
+++ b/styles/Hireus.module.css
@@ -7,6 +7,18 @@
     display: none;
 }
 
+.nextStepBtn{
+    border: none;
+    background: #5D5AD6;
+    color: #fff;
+    font-size: 1.2vw;
+    padding: 0.7vw 3vw 0.5vw 3vw;
+    border-radius: 2vw;
+    margin-top: 1vw;
+    font-family: 'Ageo';
+    /* margin-left: 33vw; */
+}
+
 .closeImg{
     width: 2%;
     position: fixed !important;
@@ -16,7 +28,7 @@
 }
 
 .closeImg:hover{
-    transform: rotate(180deg);
+    transform: rotate(120deg);
 }
 
 .headings{
@@ -43,6 +55,10 @@
     font-weight: 800;
 }
 
+.headings span{
+    color: #5D5AD6;
+}
+
 .buttonSection{
     width: 100%;
     height: 100vh;
@@ -60,7 +76,7 @@
 }
 
 .buttonsBox{
-    width: 20%;
+    width: 21%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,6 +84,8 @@
 }
 
 .buttonsBox button{
+    /* width: 80%; */
+    /* height: 80%; */
     border: none;
     border-radius: 100%;
     background: transparent;
@@ -84,7 +102,7 @@
 .activeButton{
     width: 75%;
     height: 75%;
-    background: #D6372E !important;
+    background: #5D5AD6 !important;
     background-size: 35% 35% !important;
 }
 
@@ -137,7 +155,7 @@
     font-family: 'Ageo';
     font-weight: 500;
     font-size: 1.2vw;
-    margin-top: 4vw;
+    margin-top: 2vw;
 }
 
 .headingFirst h2 .colorGrey{
@@ -173,8 +191,8 @@
 
 .active{
     width: 80%;
-    height: 100%;
-    background: #D6372E !important;
+    height: 80%;
+    background: #5D5AD6 !important;
     background-size: 35% 35% !important;
 }
 
@@ -183,11 +201,13 @@
 }
 
  .button{
+    width: 80%;
+    height: 80%;
     border: none;
     border-radius: 100%;
     background: transparent;
     border: 1px solid #e4e7f5;
-    padding: 25% 28%;
+    padding: 25% 25%;
     background-size: 35% 35%;
     transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
     background-image: url('https://buzzworthystudio.com/img/form/icon-selected.png') !important;
@@ -208,6 +228,7 @@
     margin-top: 1vw;
     color: #1a1a1a;
     font-family: "Ageo";
+    text-align: center;
 }
 
 
@@ -236,7 +257,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 2vw;
+    margin-top: 1.5vw;
 
 }
 
@@ -283,7 +304,7 @@
     appearance: none;
     width: 50px;
     height: 50px;
-    background-color: #D6372E;
+    background-color: #5D5AD6;
     cursor: pointer;
     border-radius: 50%;
     margin-top: -5px;
@@ -295,17 +316,32 @@
     position: relative;
 }
 
-.slider:before {
-  content: url("/assets/hireus/left.svg"); /* Add the path to your SVG file */
-  position: absolute; /* Use absolute positioning to position the SVG relative to the .slider element */
-  top: -8px; /* Adjust the top position of the SVG as needed */
-  left: 12px; /* Use the --thumb-left and --thumb-width CSS variables to set the left position of the SVG based on the position of the slider thumb, and also considering the width of the thumb and SVG */
-  width: 16px; /* Set a fixed width for the SVG */
-  height: 16px;
-  z-index: 1; /* Add a higher z-index to make sure the SVG is displayed above the thumb */
+.slider[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 50px;
+  height: 50px;
+  background-image: url("/assets/hireus/right.svg");
+  background-size: 16px;
+  background-position: 18px center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.slider::after {
+/* .slider[type=range]::before {
+  content: ""; 
+  position: absolute;
+  top: -8px; 
+  left: 12px; 
+  width: 16px; 
+  height: 16px;
+  background-image: url("/assets/hireus/left.svg");
+  background-repeat: no-repeat;
+  z-index: 1; 
+}
+
+.slider:after {
     content: "";
     display: block;
     position: absolute;
@@ -313,10 +349,10 @@
     width: 16px;
     background: url("/assets/hireus/right.svg") no-repeat;
     background-size: contain;
-    top: -8px; /* Position the thumb above the slider */
+    top: -8px;
     left: 28px; 
     z-index: 99;
-}
+} */
 
 .formSection{
     width: 100%;
@@ -405,7 +441,7 @@
 
 .messageBox{
     height: 100%;
-    margin-top: 40vh;
+    margin-top: 36vh;
 }
 
 .messageBox .headingFirst p{
@@ -491,7 +527,7 @@
     top: 0;
     left: 0;
     display: block;
-    background-color: #D6372E;
+    background-color: #5D5AD6;
     font-family: 'Ageo';
     text-transform: uppercase;
     color: #fff;
